--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	</properties>
 
 	<!-- Dependency repositories -->
-	<repositories>
+	<!--<repositories>
 		<repository>
 			<id>spout-repo</id>
 			<url>http://nexus.spout.org/content/groups/public/</url>
@@ -29,7 +29,7 @@
 				<updatePolicy>never</updatePolicy>
 			</snapshots>
 		</repository>
-	</repositories>
+	</repositories>-->
 
 	<!-- Dependencies -->
 	<dependencies>
@@ -50,11 +50,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.spout</groupId>
-			<artifactId>spoutapi</artifactId>
-			<version>dev-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
@@ -71,9 +66,24 @@
 			<version>2.2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.cathive.fx</groupId>
-			<artifactId>fx-guice</artifactId>
-			<version>2.0.0</version>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+			<version>15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>15</version>
 		</dependency>
 	</dependencies>
 
@@ -82,17 +92,26 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.4</version>
+				<configuration>
+					<mainClass>de.hs.settlers.SettlersApplication</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 	<!-- Reporting -->
-	<reporting>
+	<!-- Not needed and can't be found in maven central... -->
+	<!--<reporting>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -100,5 +119,5 @@
 				<version>1.0-alpha-3</version>
 			</plugin>
 		</plugins>
-	</reporting>
+	</reporting>-->
 </project>
